# wed

./: .gitignore  CMakeLists.txt  Face.cpp  Face.hpp  FaceTable.cpp  FaceTable.hpp  MainWidget.cpp  MainWidget.hpp  MenuCreator.cpp  MenuCreator.hpp  Mesh.cpp  Mesh.hpp  TableDialog.cpp  TableDialog.hpp  Utils.hpp  Vertex.cpp  Vertex.hpp  VertexTable.cpp  VertexTable.hpp  Wed.cpp  Wed.hpp  WedTable.cpp  WedTable.hpp  main.cpp  notas.txt
renderer/: Camera.cpp  Camera.hpp  GLObject.hpp  GLProgram.cpp  GLProgram.hpp  MyGLWidget.cpp  MyGLWidget.hpp  camera.cpp  camera.hpp
renderer/shaders/: polShader.frag  polShader.vert
shaders/: markedShader.frag  markedShader.vert  polShader.frag  polShader.vert  unMarkedShader.frag
